# hailsplay

./: .gitignore  Cargo.toml  README.md  config.toml  gen-types.sh  hailsplay.db  mpd.conf
.cargo/: config.toml
frontend/: .eslintrc.cjs  Cargo.toml  Trunk.toml  index.html  index.scss  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend-preact/: package-lock.json  package.json  tsconfig.json
frontend-preact/src/: api.ts  index.tsx  router.ts  routes.ts  spinner.module.css  style.css
frontend-preact/src/components/: AddUrl.module.css  AddUrl.tsx  App.tsx  Footer.tsx  Modal.module.css  Modal.tsx  SelectRadioStation.module.css  SelectRadioStation.tsx  Sheet.tsx
frontend/src/: api.ts  app.rs  index.tsx  main.rs  player.ts  routes.ts  routes.tsx  session.rs  socket.tsx  spinner.module.css  style.css  subscribe.rs  types.ts  util.rs
frontend/src/components/: AddUrl.module.css  AddUrl.tsx  App.module.css  App.tsx  Footer.module.css  LoadingSpinner.module.css  LoadingSpinner.tsx  Modal.module.css  Modal.tsx  Player.module.css  Player.tsx  PlayerControls.module.css  PlayerControls.tsx  SelectRadioStation.tsx  add.rs  mod.rs  playlist.rs  title.rs
frontend/src/util/: watch.rs
frontend/style/: spinner.scss
protocol/: Cargo.toml  protocol.d.ts
protocol/src/: lib.rs  macros.rs
script/: _common.sh  build-frontend  build-release  check  dev-frontend  gen-schema  gen-types  reset-database  start-mpd
server/: Cargo.toml  build.rs
server/migrations/: 000_create_schema.sql  001_create_archived_media.sql  001_create_db.sql
server/src/: config.rs  db.rs  error.rs  frontend.rs  fs.rs  main.rs  maint.rs  metadata.rs  mime.rs  tools.rs  ytdlp.rs
server/src/api/: archive.rs  asset.rs  metadata.rs  mod.rs  session.rs
server/src/db/: archive.rs  asset.rs  migrate.rs  mod.rs  radio.rs  schema.rs  types.rs
server/src/http/: assets.rs  media.rs  metadata.rs  mod.rs  player.rs  queue.rs  radio.rs  ws.rs
server/src/mpd/: mod.rs  playlist.rs  protocol.rs
server/src/player/: metadata.rs  mod.rs  session.rs
ws-proto/: Cargo.toml
ws-proto/src/: lib.rs
