[package]
name = "hailsplay-protocol"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
uuid = { version = "*", features = ["serde"] }
url = { version = "*", features = ["serde"] }
serde = { version = "1", features = ["serde_derive"] }
tsify = "0.4.5"
wasm-bindgen = "0.2.87"
