[package]
name = "hailsplay"
version = "0.1.0"
edition = "2021"

[features]
# built binary bundles + serves frontend assets
bundle = []

[build-dependencies]
serde = { version = "1", features = ["serde_derive"] }
serde_json = "1"

[dependencies]
hailsplay-protocol = { path = "../protocol" }

anyhow = { version = "1.0.72", features = ["backtrace"] }
axum = { version = "0.6.19", features = ["ws", "headers", "http2", "macros", "json", "query"] }
axum-extra = "0.7.5"
headers = "0.3.8"
serde = { version = "1", features = ["serde_derive"] }
serde_json = "1"
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread", "sync", "process", "io-util", "fs"] }
url = { version = "2.4.0", features = ["serde"] }
futures = "0.3.28"
pretty_env_logger = "0.5.0"
log = { version = "0.4.19", features = ["std", "serde"] }
toml = "0.7.6"
reqwest = { version = "0.11.18", features = ["native-tls", "stream"] }
lazy_static = "1.4.0"
regex = "1.9.1"
libc = "0.2.147"
uuid = { version = "1.4.1", features = ["v4"] }
bytes = "1.4.0"
tokio-stream = { version = "0.1.14", features = ["sync"] }
tokio-util = { version = "0.7.8", features = ["io"] }
thiserror = "1.0.44"
derive_more = "0.99.17"
rusqlite = { version = "0.29.0", features = ["url", "blob", "serde_json", "chrono", "uuid"] }
structopt = { version = "0.3.26", features = ["color"] }
sha256 = "1.4.0"
filenamify = "0.1.0"
axum-range = "0.2.2"
pin-project = "1.1.3"
chrono = "0.4.30"
mime = "0.3.17"
diesel = { version = "2.1.1", features = ["chrono", "returning_clauses_for_sqlite_3_35", "serde_json", "sqlite", "url", "uuid", "r2d2"] }
